--- a/ch04/4shyou.ipynb
+++ b/ch04/4shyou.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "0.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "6.00000000000378"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "7.999999999999119"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "array([6., 8.])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "array([0., 4.])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "array([6., 0.])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "array([-6.11110793e-10,  8.14814391e-10])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
        "array([-2.58983747e+13, -1.29524862e+12])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "array([-2.99999994,  3.99999992])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,11 +351,159 @@
    "source": [
     "4.4.2　ニューラルネットワークに対する勾配"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "sys.path.append(os.pardir)  # 親ディレクトリのファイルをインポートするための設定\n",
+    "import numpy as np\n",
+    "from common.functions import softmax, cross_entropy_error\n",
+    "from common.gradient import numerical_gradient\n",
+    "\n",
+    "class simpleNet:\n",
+    "    def __init__(self):\n",
+    "        self.W = np.random.randn(2,3)\n",
+    "\n",
+    "    def predict(self, x):\n",
+    "        return np.dot(x, self.W)\n",
+    "\n",
+    "    def loss(self, x, t):\n",
+    "        z = self.predict(x)\n",
+    "        y = softmax(z)\n",
+    "        loss = cross_entropy_error(y, t)\n",
+    "\n",
+    "        return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.38658521 -0.46741805  0.73926956]\n",
+      " [-0.40445981  0.43479454 -0.43148749]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "net = simpleNet()\n",
+    "print(net.W) #重みパラメータ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.46793729 0.11086425 0.055223  ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([0.6, 0.9])\n",
+    "p = net.predict(x)\n",
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.argmax(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2720417497968215"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = np.array([0, 0, 1]) #正解ラベル\n",
+    "net.loss(x, t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.25407667  0.17777221 -0.43184889]\n",
+      " [ 0.38111501  0.26665832 -0.64777333]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(W):\n",
+    "    return net.loss(x, t)\n",
+    "\n",
+    "dW = numerical_gradient(f, net.W)\n",
+    "print(dW)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.25407667  0.17777221 -0.43184889]\n",
+      " [ 0.38111501  0.26665832 -0.64777333]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = lambda w:net.loss(x,t)\n",
+    "dW = numerical_gradient(f, net.W)\n",
+    "print(dW)"
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "3824d07008deb6e0e45085d8859431397408ea1dda36e5bac4510c6bd62c9ab1"
+   "hash": "12f47859ece62a03b9d033269ff5f74c96bd049044b28ac367794a70cd4685de"
   },
   "kernelspec": {
    "display_name": "Python 3.8.10 ('venv': venv)",
