--- a/ch04/4shyou.ipynb
+++ b/ch04/4shyou.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "0.0"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "6.00000000000378"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "7.999999999999119"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,17 +141,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def function_2(x):\n",
-    "    return np.sum(x**2)"
+    "import matplotlib.pylab as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def function_2(x):\n",
+    "    return np.sum(x**2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +196,7 @@
        "array([6., 8.])"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +216,7 @@
        "array([0., 4.])"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +236,7 @@
        "array([6., 0.])"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +286,7 @@
        "array([-6.11110793e-10,  8.14814391e-10])"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +317,7 @@
        "array([-2.58983747e+13, -1.29524862e+12])"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +345,7 @@
        "array([-2.99999994,  3.99999992])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,15 +391,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.38658521 -0.46741805  0.73926956]\n",
-      " [-0.40445981  0.43479454 -0.43148749]]\n"
+      "[[ 0.28217796 -1.26107547  1.02406606]\n",
+      " [-2.59261893  0.89642484 -0.23420978]]\n"
      ]
     }
    ],
@@ -400,14 +410,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.46793729 0.11086425 0.055223  ]\n"
+      "[-2.16405026  0.05013707  0.40365084]\n"
      ]
     }
    ],
@@ -419,16 +429,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "2"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,16 +449,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.2720417497968215"
+       "0.5760107702016808"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,15 +470,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.25407667  0.17777221 -0.43184889]\n",
-      " [ 0.38111501  0.26665832 -0.64777333]]\n"
+      "[[ 0.02587345  0.23684473 -0.26271818]\n",
+      " [ 0.03881018  0.35526709 -0.39407727]]\n"
      ]
     }
    ],
@@ -482,15 +492,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.25407667  0.17777221 -0.43184889]\n",
-      " [ 0.38111501  0.26665832 -0.64777333]]\n"
+      "[[ 0.02587345  0.23684473 -0.26271818]\n",
+      " [ 0.03881018  0.35526709 -0.39407727]]\n"
      ]
     }
    ],
@@ -503,7 +513,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "12f47859ece62a03b9d033269ff5f74c96bd049044b28ac367794a70cd4685de"
+   "hash": "3824d07008deb6e0e45085d8859431397408ea1dda36e5bac4510c6bd62c9ab1"
   },
   "kernelspec": {
    "display_name": "Python 3.8.10 ('venv': venv)",
