--- a/ch04/test.ipynb
+++ b/ch04/test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,9 +41,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+      "29515/29515 [==============================] - 0s 1us/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+      "26421880/26421880 [==============================] - 1s 0us/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+      "5148/5148 [==============================] - 0s 0s/step\n",
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+      "4422102/4422102 [==============================] - 0s 0us/step\n"
+     ]
+    }
+   ],
    "source": [
     "fashion_mnist = keras.datasets.fashion_mnist\n",
     "\n",
@@ -59,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +100,7 @@
        "(60000, 28, 28)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +127,7 @@
        "60000"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +154,7 @@
        "array([9, 0, 0, ..., 3, 0, 5], dtype=uint8)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +181,7 @@
        "(10000, 28, 28)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +208,7 @@
        "10000"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -331,8 +346,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\zenko\\projects\\deep-learning-from-scratch\\ch04\\test.ipynb Cell 27'\u001b[0m in \u001b[0;36m<cell line: 16>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/zenko/projects/deep-learning-from-scratch/ch04/test.ipynb#ch0000027?line=18'>19</a>\u001b[0m t_batch \u001b[39m=\u001b[39m train_labels[batch_mask]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/zenko/projects/deep-learning-from-scratch/ch04/test.ipynb#ch0000027?line=20'>21</a>\u001b[0m \u001b[39m# 勾配の計算\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/zenko/projects/deep-learning-from-scratch/ch04/test.ipynb#ch0000027?line=21'>22</a>\u001b[0m \u001b[39m#grad = network.numerical_gradient(x_batch, t_batch)\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/zenko/projects/deep-learning-from-scratch/ch04/test.ipynb#ch0000027?line=22'>23</a>\u001b[0m grad \u001b[39m=\u001b[39m network\u001b[39m.\u001b[39;49mgradient(x_batch, t_batch)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/zenko/projects/deep-learning-from-scratch/ch04/test.ipynb#ch0000027?line=24'>25</a>\u001b[0m \u001b[39m# パラメータの更新\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/zenko/projects/deep-learning-from-scratch/ch04/test.ipynb#ch0000027?line=25'>26</a>\u001b[0m \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m (\u001b[39m'\u001b[39m\u001b[39mW1\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mb1\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mW2\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mb2\u001b[39m\u001b[39m'\u001b[39m):\n",
-      "File \u001b[1;32mc:\\Users\\zenko\\projects\\deep-learning-from-scratch\\ch04\\two_layer_net.py:64\u001b[0m, in \u001b[0;36mTwoLayerNet.gradient\u001b[1;34m(self, x, t)\u001b[0m\n\u001b[0;32m     61\u001b[0m batch_num \u001b[39m=\u001b[39m x\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]\n\u001b[0;32m     63\u001b[0m \u001b[39m# forward\u001b[39;00m\n\u001b[1;32m---> 64\u001b[0m a1 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mdot(x, W1) \u001b[39m+\u001b[39m b1\n\u001b[0;32m     65\u001b[0m z1 \u001b[39m=\u001b[39m sigmoid(a1)\n\u001b[0;32m     66\u001b[0m a2 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdot(z1, W2) \u001b[39m+\u001b[39m b2\n",
+      "\u001b[1;32mc:\\Users\\projects\\seminar\\deep-learning-from-scratch\\ch04\\test.ipynb Cell 26'\u001b[0m in \u001b[0;36m<cell line: 16>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/projects/seminar/deep-learning-from-scratch/ch04/test.ipynb#ch0000025?line=18'>19</a>\u001b[0m t_batch \u001b[39m=\u001b[39m train_labels[batch_mask]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/projects/seminar/deep-learning-from-scratch/ch04/test.ipynb#ch0000025?line=20'>21</a>\u001b[0m \u001b[39m# 勾配の計算\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/projects/seminar/deep-learning-from-scratch/ch04/test.ipynb#ch0000025?line=21'>22</a>\u001b[0m \u001b[39m#grad = network.numerical_gradient(x_batch, t_batch)\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/projects/seminar/deep-learning-from-scratch/ch04/test.ipynb#ch0000025?line=22'>23</a>\u001b[0m grad \u001b[39m=\u001b[39m network\u001b[39m.\u001b[39;49mgradient(x_batch, t_batch) \u001b[39m#高速版\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/projects/seminar/deep-learning-from-scratch/ch04/test.ipynb#ch0000025?line=24'>25</a>\u001b[0m \u001b[39m# パラメータの更新\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/projects/seminar/deep-learning-from-scratch/ch04/test.ipynb#ch0000025?line=25'>26</a>\u001b[0m \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m (\u001b[39m'\u001b[39m\u001b[39mW1\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mb1\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mW2\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mb2\u001b[39m\u001b[39m'\u001b[39m):\n",
+      "File \u001b[1;32mc:\\Users\\projects\\seminar\\deep-learning-from-scratch\\ch04\\two_layer_net.py:64\u001b[0m, in \u001b[0;36mTwoLayerNet.gradient\u001b[1;34m(self, x, t)\u001b[0m\n\u001b[0;32m     <a href='file:///c%3A/Users/projects/seminar/deep-learning-from-scratch/ch04/two_layer_net.py?line=60'>61</a>\u001b[0m batch_num \u001b[39m=\u001b[39m x\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]\n\u001b[0;32m     <a href='file:///c%3A/Users/projects/seminar/deep-learning-from-scratch/ch04/two_layer_net.py?line=62'>63</a>\u001b[0m \u001b[39m# forward\u001b[39;00m\n\u001b[1;32m---> <a href='file:///c%3A/Users/projects/seminar/deep-learning-from-scratch/ch04/two_layer_net.py?line=63'>64</a>\u001b[0m a1 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mdot(x, W1) \u001b[39m+\u001b[39m b1\n\u001b[0;32m     <a href='file:///c%3A/Users/projects/seminar/deep-learning-from-scratch/ch04/two_layer_net.py?line=64'>65</a>\u001b[0m z1 \u001b[39m=\u001b[39m sigmoid(a1)\n\u001b[0;32m     <a href='file:///c%3A/Users/projects/seminar/deep-learning-from-scratch/ch04/two_layer_net.py?line=65'>66</a>\u001b[0m a2 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdot(z1, W2) \u001b[39m+\u001b[39m b2\n",
       "File \u001b[1;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mdot\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
       "\u001b[1;31mValueError\u001b[0m: shapes (100,28,28) and (784,50) not aligned: 28 (dim 2) != 784 (dim 0)"
      ]
@@ -392,6 +407,9 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "12f47859ece62a03b9d033269ff5f74c96bd049044b28ac367794a70cd4685de"
+  },
   "kernelspec": {
    "display_name": "Python 3.8.10 ('venv': venv)",
    "language": "python",
