--- a/ch05/5syou.ipynb
+++ b/ch05/5syou.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -204,10 +204,601 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Sigmoid:\n",
+    "    def __init__(self):\n",
+    "        self.out = None\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = sigmoid(x)\n",
+    "        self.out = out\n",
+    "        return out\n",
+    "\n",
+    "    def backward(self, dout):\n",
+    "        dx = dout * (1.0 - self.out) * self.out\n",
+    "\n",
+    "        return dx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5.6.1　Affineレイヤ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = -np.random.rand(2) #入力\n",
+    "W = np.random.rand(2,3) #重み\n",
+    "B = np.random.rand(3) #バイアス"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2,)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape #(2,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W.shape #(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3,)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B.shape #(3,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3,)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y = np.dot(X, W) + B\n",
+    "Y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.75229191 -0.50035335 -0.58192535]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5.6.2　バッチ版Affineレイヤ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "N=2（データが2個）の場合の具体例"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  0,  0],\n",
+       "       [10, 10, 10]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_dot_W = np.array([[0, 0, 0], [10, 10, 10]])\n",
+    "B = np.array([1, 2, 3])\n",
+    "\n",
+    "X_dot_W"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3],\n",
+       "       [11, 12, 13]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_dot_W + B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dY = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "dY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 7, 9])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dB = np.sum(dY, axis=0) #axis=0の時は各列の要素を全て足し合わせる．axis=1の時は各行の要素を全て足す．\n",
+    "dB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Affineの実装"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Affine:\n",
+    "    def __init__(self, W, b):\n",
+    "        self.W =W\n",
+    "        self.b = b\n",
+    "        \n",
+    "        self.x = None\n",
+    "        self.original_x_shape = None\n",
+    "        # 重み・バイアスパラメータの微分\n",
+    "        self.dW = None\n",
+    "        self.db = None\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # テンソル対応\n",
+    "        self.original_x_shape = x.shape\n",
+    "        x = x.reshape(x.shape[0], -1)\n",
+    "        self.x = x\n",
+    "\n",
+    "        out = np.dot(self.x, self.W) + self.b\n",
+    "\n",
+    "        return out\n",
+    "\n",
+    "    def backward(self, dout):\n",
+    "        dx = np.dot(dout, self.W.T)\n",
+    "        self.dW = np.dot(self.x.T, dout)\n",
+    "        self.db = np.sum(dout, axis=0)\n",
+    "        \n",
+    "        dx = dx.reshape(*self.original_x_shape)  # 入力データの形状に戻す（テンソル対応）\n",
+    "        return dx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5.6.3　Softmax-with-Lossレイヤ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Softmax関数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def softmax(x):\n",
+    "    x = x - np.max(x, axis=-1, keepdims=True)   # オーバーフロー対策\n",
+    "    return np.exp(x) / np.sum(np.exp(x), axis=-1, keepdims=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "交差エントロピー誤差"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cross_entropy_error(y, t):\n",
+    "    if y.ndim == 1:\n",
+    "        t = t.reshape(1, t.size)\n",
+    "        y = y.reshape(1, y.size)\n",
+    "        \n",
+    "    # 教師データがone-hot-vectorの場合、正解ラベルのインデックスに変換\n",
+    "    if t.size == y.size:\n",
+    "        t = t.argmax(axis=1)\n",
+    "             \n",
+    "    batch_size = y.shape[0]\n",
+    "    return -np.sum(np.log(y[np.arange(batch_size), t] + 1e-7)) / batch_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SoftmaxWithLoss:\n",
+    "    def __init__(self):\n",
+    "        self.loss = None\n",
+    "        self.y = None # softmaxの出力\n",
+    "        self.t = None # 教師データ\n",
+    "\n",
+    "    def forward(self, x, t):\n",
+    "        self.t = t\n",
+    "        self.y = softmax(x)\n",
+    "        self.loss = cross_entropy_error(self.y, self.t)\n",
+    "        \n",
+    "        return self.loss\n",
+    "\n",
+    "    def backward(self, dout=1):\n",
+    "        batch_size = self.t.shape[0]\n",
+    "        if self.t.size == self.y.size: # 教師データがone-hot-vectorの場合\n",
+    "            dx = (self.y - self.t) / batch_size\n",
+    "        else:\n",
+    "            dx = self.y.copy()\n",
+    "            dx[np.arange(batch_size), self.t] -= 1\n",
+    "            dx = dx / batch_size\n",
+    "        \n",
+    "        return dx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5.7　誤差逆伝播法の実装"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# coding: utf-8\n",
+    "import sys, os\n",
+    "sys.path.append(os.pardir)  # 親ディレクトリのファイルをインポートするための設定\n",
+    "import numpy as np\n",
+    "from common.layers import *\n",
+    "from common.gradient import numerical_gradient\n",
+    "from collections import OrderedDict\n",
+    "\n",
+    "\n",
+    "class TwoLayerNet:\n",
+    "\n",
+    "    def __init__(self, input_size, hidden_size, output_size, weight_init_std = 0.01):\n",
+    "        # 重みの初期化\n",
+    "        self.params = {}\n",
+    "        self.params['W1'] = weight_init_std * np.random.randn(input_size, hidden_size)\n",
+    "        self.params['b1'] = np.zeros(hidden_size)\n",
+    "        self.params['W2'] = weight_init_std * np.random.randn(hidden_size, output_size) \n",
+    "        self.params['b2'] = np.zeros(output_size)\n",
+    "\n",
+    "        # レイヤの生成\n",
+    "        self.layers = OrderedDict()\n",
+    "        self.layers['Affine1'] = Affine(self.params['W1'], self.params['b1'])\n",
+    "        self.layers['Relu1'] = Relu()\n",
+    "        self.layers['Affine2'] = Affine(self.params['W2'], self.params['b2'])\n",
+    "\n",
+    "        self.lastLayer = SoftmaxWithLoss()\n",
+    "        \n",
+    "    def predict(self, x):\n",
+    "        for layer in self.layers.values():\n",
+    "            x = layer.forward(x)\n",
+    "        \n",
+    "        return x\n",
+    "        \n",
+    "    # x:入力データ, t:教師データ\n",
+    "    def loss(self, x, t):\n",
+    "        y = self.predict(x)\n",
+    "        return self.lastLayer.forward(y, t)\n",
+    "    \n",
+    "    def accuracy(self, x, t):\n",
+    "        y = self.predict(x)\n",
+    "        y = np.argmax(y, axis=1)\n",
+    "        if t.ndim != 1 : t = np.argmax(t, axis=1)\n",
+    "        \n",
+    "        accuracy = np.sum(y == t) / float(x.shape[0])\n",
+    "        return accuracy\n",
+    "        \n",
+    "    # x:入力データ, t:教師データ\n",
+    "    def numerical_gradient(self, x, t):\n",
+    "        loss_W = lambda W: self.loss(x, t)\n",
+    "        \n",
+    "        grads = {}\n",
+    "        grads['W1'] = numerical_gradient(loss_W, self.params['W1'])\n",
+    "        grads['b1'] = numerical_gradient(loss_W, self.params['b1'])\n",
+    "        grads['W2'] = numerical_gradient(loss_W, self.params['W2'])\n",
+    "        grads['b2'] = numerical_gradient(loss_W, self.params['b2'])\n",
+    "        \n",
+    "        return grads\n",
+    "        \n",
+    "    def gradient(self, x, t):\n",
+    "        # forward\n",
+    "        self.loss(x, t)\n",
+    "\n",
+    "        # backward\n",
+    "        dout = 1\n",
+    "        dout = self.lastLayer.backward(dout)\n",
+    "        \n",
+    "        layers = list(self.layers.values())\n",
+    "        layers.reverse()\n",
+    "        for layer in layers:\n",
+    "            dout = layer.backward(dout)\n",
+    "\n",
+    "        # 設定\n",
+    "        grads = {}\n",
+    "        grads['W1'], grads['b1'] = self.layers['Affine1'].dW, self.layers['Affine1'].db\n",
+    "        grads['W2'], grads['b2'] = self.layers['Affine2'].dW, self.layers['Affine2'].db\n",
+    "\n",
+    "        return grads\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "勾配確認"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1:4.5882731608095904e-10\n",
+      "b1:2.8587088105763193e-09\n",
+      "W2:5.90048027419946e-09\n",
+      "b2:1.399583212019495e-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "# coding: utf-8\n",
+    "import sys, os\n",
+    "sys.path.append(os.pardir)  # 親ディレクトリのファイルをインポートするための設定\n",
+    "import numpy as np\n",
+    "from dataset.mnist import load_mnist\n",
+    "from two_layer_net import TwoLayerNet\n",
+    "\n",
+    "# データの読み込み\n",
+    "(x_train, t_train), (x_test, t_test) = load_mnist(normalize=True, one_hot_label=True)\n",
+    "\n",
+    "network = TwoLayerNet(input_size=784, hidden_size=50, output_size=10)\n",
+    "\n",
+    "x_batch = x_train[:3]\n",
+    "t_batch = t_train[:3]\n",
+    "\n",
+    "grad_numerical = network.numerical_gradient(x_batch, t_batch)\n",
+    "grad_backprop = network.gradient(x_batch, t_batch)\n",
+    "\n",
+    "for key in grad_numerical.keys():\n",
+    "    diff = np.average( np.abs(grad_backprop[key] - grad_numerical[key]) )\n",
+    "    print(key + \":\" + str(diff))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5.7.4　誤差逆伝播法を使った学習"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1289 0.13\n",
+      "0.8999666666666667 0.905\n",
+      "0.9232666666666667 0.9239\n",
+      "0.9356833333333333 0.9366\n",
+      "0.9466 0.9455\n",
+      "0.95365 0.9487\n",
+      "0.9582333333333334 0.953\n",
+      "0.96195 0.9573\n",
+      "0.9657166666666667 0.9594\n",
+      "0.9673833333333334 0.96\n",
+      "0.9701666666666666 0.9624\n",
+      "0.9726166666666667 0.9639\n",
+      "0.9735666666666667 0.9625\n",
+      "0.9756666666666667 0.9666\n",
+      "0.9762833333333333 0.9669\n",
+      "0.9778666666666667 0.9672\n",
+      "0.9796666666666667 0.9688\n"
+     ]
+    }
+   ],
+   "source": [
+    "# coding: utf-8\n",
+    "import sys, os\n",
+    "sys.path.append(os.pardir)\n",
+    "\n",
+    "import numpy as np\n",
+    "from dataset.mnist import load_mnist\n",
+    "from two_layer_net import TwoLayerNet\n",
+    "\n",
+    "# データの読み込み\n",
+    "(x_train, t_train), (x_test, t_test) = load_mnist(normalize=True, one_hot_label=True)\n",
+    "\n",
+    "network = TwoLayerNet(input_size=784, hidden_size=50, output_size=10)\n",
+    "\n",
+    "iters_num = 10000\n",
+    "train_size = x_train.shape[0]\n",
+    "batch_size = 100\n",
+    "learning_rate = 0.1\n",
+    "\n",
+    "train_loss_list = []\n",
+    "train_acc_list = []\n",
+    "test_acc_list = []\n",
+    "\n",
+    "iter_per_epoch = max(train_size / batch_size, 1)\n",
+    "\n",
+    "for i in range(iters_num):\n",
+    "    batch_mask = np.random.choice(train_size, batch_size)\n",
+    "    x_batch = x_train[batch_mask]\n",
+    "    t_batch = t_train[batch_mask]\n",
+    "    \n",
+    "    # 勾配\n",
+    "    #grad = network.numerical_gradient(x_batch, t_batch)\n",
+    "    grad = network.gradient(x_batch, t_batch)\n",
+    "    \n",
+    "    # 更新\n",
+    "    for key in ('W1', 'b1', 'W2', 'b2'):\n",
+    "        network.params[key] -= learning_rate * grad[key]\n",
+    "    \n",
+    "    loss = network.loss(x_batch, t_batch)\n",
+    "    train_loss_list.append(loss)\n",
+    "    \n",
+    "    if i % iter_per_epoch == 0:\n",
+    "        train_acc = network.accuracy(x_train, t_train)\n",
+    "        test_acc = network.accuracy(x_test, t_test)\n",
+    "        train_acc_list.append(train_acc)\n",
+    "        test_acc_list.append(test_acc)\n",
+    "        print(train_acc, test_acc)"
+   ]
   }
  ],
  "metadata": {
