--- a/ch04/4shyou.ipynb
+++ b/ch04/4shyou.ipynb
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "np.float32(1e-50)"
+    "np.float32(1e-50) #丸め誤差で0.0になる"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def numerical_diff(f, x):\n",
+    "def numerical_diff(f, x): #中心差分\n",
     "    h = 1e-4 #0.0001\n",
     "    return (f(x+h) - f(x-h)) / (2*h)"
    ]
