--- a/ch04/4syou_.ipynb
+++ b/ch04/4syou_.ipynb
@@ -88,7 +88,7 @@
    "source": [
     "def cross_entropy_error(y, t):\n",
     "    delta = 1e-7\n",
-    "    return -np.sum(t * np.log(y + delta))"
+    "    return -np.sum(t * np.log(y + delta)) #+ deltaしてるのはlogが発散しないようにするため"
    ]
   },
   {
@@ -235,20 +235,6 @@
     "    batch_size = y.shape[0]\n",
     "    return -np.sum(np.log(y[np.arange(batch_size), t] + 1e-7)) / batch_size"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "4.3　数値微分"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
