--- a/ch04/4shyou.ipynb
+++ b/ch04/4shyou.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "0.0"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "6.00000000000378"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "7.999999999999119"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "array([6., 8.])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "array([0., 4.])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "array([6., 0.])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,11 +254,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradient_descent(f, init_x, lr=0.01, step_num=100):\n",
+    "def gradient_descent(f, init_x, lr=0.01, step_num=100): #lrは学習率\n",
     "    x = init_x\n",
     "    \n",
     "    for i in range(step_num):\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "array([-6.11110793e-10,  8.14814391e-10])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "array([-2.58983747e+13, -1.29524862e+12])"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "array([-2.99999994,  3.99999992])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,15 +391,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.28217796 -1.26107547  1.02406606]\n",
-      " [-2.59261893  0.89642484 -0.23420978]]\n"
+      "[[-1.71987957  1.48315144 -2.26739204]\n",
+      " [ 1.74498144 -0.66141273 -0.34810384]]\n"
      ]
     }
    ],
@@ -410,14 +410,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-2.16405026  0.05013707  0.40365084]\n"
+      "[ 0.53855556  0.29461941 -1.67372869]\n"
      ]
     }
    ],
@@ -429,16 +429,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "0"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,16 +449,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5760107702016808"
+       "2.8504390548133083"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,15 +470,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.02587345  0.23684473 -0.26271818]\n",
-      " [ 0.03881018  0.35526709 -0.39407727]]\n"
+      "[[ 0.31695867  0.24834905 -0.56530772]\n",
+      " [ 0.47543801  0.37252358 -0.84796159]]\n"
      ]
     }
    ],
@@ -486,21 +486,21 @@
     "def f(W):\n",
     "    return net.loss(x, t)\n",
     "\n",
-    "dW = numerical_gradient(f, net.W)\n",
+    "dW = numerical_gradient(f, net.W) #損失関数の勾配\n",
     "print(dW)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.02587345  0.23684473 -0.26271818]\n",
-      " [ 0.03881018  0.35526709 -0.39407727]]\n"
+      "[[ 0.31695867  0.24834905 -0.56530772]\n",
+      " [ 0.47543801  0.37252358 -0.84796159]]\n"
      ]
     }
    ],
